# FORESEE

./: .gitignore  .gitmodules  .requirements.txt.swp  311_beast_requirements.txt  311_environment.txt  CMakeLists.txt  Dockerfile  README.md  adam_1_jax_test.npy  adam_1_test.npy  beast_setup.sh  docker-compose.yaml  docker_setup.sh  elevators.mat  expansion_debug.py  gurobi.lic  laptop_requirements.txt  new_ideal.npy  new_ideal_deterministic.npy  new_ideal_old.npy  new_ideal_scipy_full.npy  new_ideal_small_error_success_adam_scipy_rc.npy  new_rl.npy  new_rl_so_far.npy  obstacles.py  package.xml  plot_mc_violations.py  plot_times.py  requirements388old.txt  result_opt.npy  result_opt_2.npy  setup.cfg  setup.py  setup.sh  setup_docker.sh  test.py  trajectory_optimization.py  trajectory_optimization_stochastic_genUT.py  uncertainty_comparison.py  uncertainty_comparison_genUT.py
cartpole/: cartpole_UTRL_simple.py  cartpole_UTRL_simple4_offline.py  cartpole_UTRL_simple_offline_constrained.py  cartpole_main.py  cartpole_main_rl.py  cartpole_main_rl_angle.py  cartpole_main_scan.py  cartpole_main_scan_sigma.py  cartpole_main_scan_sigma_adam.py  cartpole_main_scan_sigma_adam_jax.py  cartpole_main_scan_sigma_adam_v2.py  cartpole_main_scan_sigma_large_horizon.py  cartpole_main_scan_sigma_offline.py  cartpole_main_up_policy.py  cartpole_policy.py  cartpole_policy_angle.py  cartpole_policy_scan.py  cartpole_policy_scan_sigma.py  cartpole_policy_torch.py  cartpole_policy_up.py  gp_utils.py  main_notebook.ipynb  pilco.py  random_utils.py
cartpole_gpytorch/: cartpole_UTRL.py  cartpole_UTRL_paper_offline_constrained.py  cartpole_UTRL_simple.py  cartpole_UTRL_simple2.py  cartpole_UTRL_simple3_offline.py  cartpole_UTRL_simple4_offline.py  cartpole_UTRL_simple_offline_constrained.py  cartpole_UTRL_uni_paper_offline_constrained.py  cartpole_evaluateGP.py  cartpole_offline_reciding horizon.py  cartpole_offline_reciding horizon_unconstrained.py  cartpole_policy.py
cartpole_new/: gp_utils.py  (+5 more)
(+166 files in other folders)
