<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

 <name>foresee</name>
 <version>0.0.0</version>
 <description>Experiments with FORESEE for stochastic policy optimization</description>
 <maintainer email="hardiksp@umich.edu">user</maintainer>
 <license>Apache License 2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>

 <depend>rclcpp</depend>
 <depend>rclpy</depend>
 <depend>dasc_msgs</depend>
 <depend>std_msgs</depend>
 <depend>geometry_msgs</depend>
 <depend>nav_msgs</depend>
 <depend>sensor_msgs</depend>
 <depend>visualization_msgs</depend>
 <exec_depend>ros2launch</exec_depend>
 
</package>